<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#EEEEEE">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:text="@string/current_connetion_target"
                android:textSize="28sp" />

            <Button
                android:id="@+id/loadSettingButton"
                style="?attr/buttonStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/load_setting"
                android:textSize="20sp" />
        </LinearLayout>

        <TextView
            android:id="@+id/currentServerAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:autoSizeTextType="uniform"
            android:background="@drawable/frame_round_white"
            android:gravity="center"
            android:padding="8dp"
            android:textSize="28sp"
            tools:ignore="UnusedAttribute" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="64dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:text="@string/current_mode"
                android:textSize="28sp" />

            <Button
                android:id="@+id/changeModeButton"
                style="?attr/buttonStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/change_mode"
                android:textSize="20sp" />
        </LinearLayout>

        <TextView
            android:id="@+id/currentRunningModeText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:autoSizeTextType="uniform"
            android:background="@drawable/frame_round_white"
            android:gravity="center"
            android:padding="8dp"
            android:textSize="28sp"
            tools:ignore="UnusedAttribute" />
    </LinearLayout>
</ScrollView>