<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:ignore="UnusedAttribute"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:baselineAligned="false"
        android:gravity="center"
        android:orientation="horizontal"
        android:weightSum="1">

        <include
            android:id="@+id/calculator_layout"
            layout="@layout/view_calculator_layout"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.5" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.5"
            android:orientation="vertical"
            android:padding="8dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="100dp"
                    android:orientation="horizontal"
                    android:weightSum="1">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="0.3"
                        android:autoSizeTextType="uniform"
                        android:gravity="center"
                        android:labelFor="@+id/sum_river"
                        android:maxLines="1"
                        android:text="@string/total"
                        app:autoSizeTextType="uniform" />

                    <TextView
                        android:id="@+id/sum_river"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="0.7"
                        android:autoSizeTextType="uniform"
                        android:clickable="false"
                        android:focusable="false"
                        android:focusableInTouchMode="false"
                        android:gravity="center_vertical|end"
                        android:inputType="none"
                        android:maxLines="1"
                        tools:text="0"
                        android:textStyle="bold"
                        app:autoSizeTextType="uniform" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="100dp"
                    android:orientation="horizontal"
                    android:weightSum="1">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="0.3"
                        android:autoSizeTextType="uniform"
                        android:gravity="center"
                        android:labelFor="@+id/receive_river"
                        android:maxLines="1"
                        android:text="@string/deposit"
                        app:autoSizeTextType="uniform" />

                    <TextView
                        android:id="@+id/receive_river"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="0.7"
                        android:autoSizeTextType="uniform"
                        android:clickable="false"
                        android:gravity="center_vertical|end"
                        android:maxLines="1"
                        tools:text="0"
                        android:textStyle="bold"
                        app:autoSizeTextType="uniform" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/back"
                    style="@style/Widget.AppCompat.Button"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end|bottom"
                    android:layout_weight="0.5"
                    android:autoSizeTextType="uniform"
                    android:maxLines="1"
                    android:paddingTop="16dp"
                    android:paddingBottom="22dp"
                    android:text="@string/go_back"
                    app:autoSizeTextType="uniform" />

                <Button
                    android:id="@+id/done"
                    style="@style/Widget.AppCompat.Button.Colored"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end|bottom"
                    android:layout_weight="0.5"
                    android:autoSizeTextType="uniform"
                    android:clickable="false"
                    android:enabled="false"
                    android:maxLines="1"
                    android:paddingTop="16dp"
                    android:paddingBottom="22dp"
                    android:text="@string/account"
                    app:autoSizeTextType="uniform" />
            </LinearLayout>
        </LinearLayout>
</LinearLayout>
