<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:background="@android:drawable/alert_light_frame"
    android:gravity="center"
    android:orientation="vertical"
    tools:ignore="UnusedAttribute">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/result_sum"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@id/result_2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.25"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/sum_river_label"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:autoSizeTextType="uniform"
            android:gravity="start"
            android:maxLines="1"
            android:text="@string/total"
            app:autoSizeTextType="uniform"
            app:layout_constraintEnd_toStartOf="@id/sum_river"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/sum_river"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="0dp"
            android:autoSizeTextType="uniform"
            android:gravity="end"
            android:maxLines="1"
            android:textStyle="bold"
            app:autoSizeTextType="uniform"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/sum_river_label"
            tools:ignore="Autofill" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/result_2"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@id/result_3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.25"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:id="@+id/receive_river_label"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:autoSizeTextType="uniform"
            android:gravity="start"
            android:maxLines="1"
            android:text="@string/deposit"
            app:autoSizeTextType="uniform"
            app:layout_constraintEnd_toStartOf="@id/receive_river"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/receive_river"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="0dp"
            android:autoSizeTextType="uniform"
            android:gravity="end"
            android:maxLines="1"
            android:textStyle="bold"
            app:autoSizeTextType="uniform"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/receive_river_label"
            tools:ignore="Autofill" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/result_3"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@id/result_4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.25"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:id="@+id/change_river_label"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:autoSizeTextType="uniform"
            android:gravity="start"
            android:maxLines="1"
            android:text="@string/change"
            app:autoSizeTextType="uniform"
            app:layout_constraintEnd_toStartOf="@id/change_river"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/change_river"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="0dp"
            android:autoSizeTextType="uniform"
            android:gravity="end"
            android:maxLines="1"
            android:textStyle="bold"
            app:autoSizeTextType="uniform"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/change_river_label"
            tools:ignore="Autofill" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <LinearLayout
        android:id="@+id/result_4"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.25"
        app:layout_constraintStart_toStartOf="parent">

        <Button
            android:id="@+id/go_back"
            style="@style/Widget.AppCompat.Button"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:autoSizeTextType="uniform"
            android:maxLines="1"
            android:text="@string/back"
            app:autoSizeTextType="uniform" />

        <Button
            android:id="@+id/ok"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="0dp"
            android:layout_weight="1"
            android:autoSizeTextType="uniform"
            android:maxLines="1"
            android:text="@android:string/ok"
            app:autoSizeTextType="uniform" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
